# trainings

Beginner_Modern_C++_training_2021-05/training_day1/: main.cpp
Beginner_Modern_C++_training_2021-05/training_day2/: containers.cpp  objects.cpp  student.cpp  student.h
Beginner_Modern_C++_training_2021-05/training_day3/: main.cpp  school.cpp  school.h  student.cpp  student.h
Beginner_Modern_C++_training_2021-05/training_day4/: flac.cpp  flac.h  main.cpp  media.cpp  media.h  mediaplayer.cpp  mediaplayer.h  mp3.cpp  mp3.h
Beginner_Modern_C++_training_2021-05/training_day5/: circle.cpp  circle.h  factory.h  main.cpp  shape.cpp  shape.h
Beginner_Modern_C++_training_2021-05/training_day6/: main.cpp  matrix.cpp  matrix.h
Intermediate_Modern_C++_training_2022-09/: dynamic_mem_alloc.cpp  exercise1_iterator.cpp  exercise2_merge_sort_list.cpp  exercise4_frequency_table.cpp  lambda_func.cpp  move_string.cpp  smart_pointers.cpp  structured_bindings.cpp  summary.txt
Intermediate_Modern_C++_training_2022-09/config_thing/: CMakeLists.txt  IConfig.h  config.cpp  config.h  mockConfig.cpp  mockConfig.h  motor.cpp  motor.h  prod_main.cpp  test_main.cpp
OO_design_patterns_training_2022-11/Exercises/C++/: CMakeLists.txt
OO_design_patterns_training_2022-11/Exercises/C++/Exercise/: CMakeLists.txt
OO_design_patterns_training_2022-11/Exercises/C++/Exercise/include/: TextReporter.h
OO_design_patterns_training_2022-11/Exercises/C++/Exercise/src/: TextReporter.cpp  main.cpp
OO_design_patterns_training_2022-11/Exercises/C++/OverlyIntricateDataSource/: CMakeLists.txt
OO_design_patterns_training_2022-11/Solutions/C++/Exercise/: CMakeLists.txt
OO_design_patterns_training_2022-11/Solutions/C++/Exercise/include/: DataSourceAdapter.h  Decorators.h  Reporter.h  TextReporter.h  XmlReporter.h
OO_design_patterns_training_2022-11/Solutions/C++/Exercise/src/: DataSourceAdapter.cpp  Decorators.cpp  Reporter.cpp  XmlReporter.cpp  main.cpp
(+92 files in other folders)
